--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,21 @@ permalinks: pretty
 plugins:
   - jekyll-feed
 
+include:
+  - CONTRIBUTING.md
+  - AUTHORS.md
+  - LICENSE.md
+  - CONTRIBUTORS.md
+
 # Exclude the `vendor` folder created by Travis
 exclude:
   - vendor
+
+# To replace the standard GitHub metadata if it fails: https://help.github.com/articles/repository-metadata-on-github-pages/
+license:
+  key: eupl
+  name: European Union Public License 1.2
+  spdx_id: EUPL-1.2
+
+# Add a custom copyright message
+# copyright: Foundation For Public Code
