--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,6 @@ license:
 
 # Add a custom copyright message
 # copyright: Foundation For Public Code
+
+# Enable Table of Contents displaying
+toc: true
