--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ license:
   spdx_id: EUPL-1.2
 
 # Add a custom copyright message
-# copyright: Foundation For Public Code
+# copyright: Foundation for Public Code
 
 # Enable Table of Contents displaying
 toc: true
