Add a smart automatic breadcrumb system

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ license:
 toc: true
 
 # Show the navigation
-# show_navigation: true
+show_navigation: true
+show_breadcrumbs: true
 
 defaults:
   -
