--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,13 @@ license:
 toc: true
 
 # Show the navigation
-show_navigation: true
+# show_navigation: true
+
+# Show breadcrumbs on every page 
 show_breadcrumbs: true
+
+# Hide the Foundation footer
+# hide_foundation_footer: true
 
 defaults:
   -
