Display headings separately from content.
If the toggle for removing the headings is set on the plugin, display headings separately.

--- a/_config.yml
+++ b/_config.yml
@@ -51,3 +51,5 @@ defaults:
     values:
       order: 100 # Show the license at the bottom of the navigation
 
+titles_from_headings:
+  strip_title: true
